tdf#166751: introduce sfx2::ExecDialogPerRequestAndDispose

It is intended to choose automatically, which mode to use when executing
dialogs in request handlers. The work on making dialogs async ignored
the need of synchronous execution when necessary; this helper should
make it transparent.

Change-Id: If374bbf08159d1591579a278f7319e90f952f4f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186088
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>